<resources>
    <string name="app_name">Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authentication_email">Email</string>
    <string name="authentication_welcome1">Добро пожаловать в</string>
    <string name="authentication_welcome2">My Locaytion</string>
    <string name="authentication_password">Password</string>
    <string name="enable_title">Title Labal</string>
    <string name="title_activity_maps">Map</string>
    <string name="register_email">Email</string>
    <string name="register_user_name">User Name</string>
    <string name="register_password">Password</string>
    <string name="register_repeat_password">Repeat Password</string>
    <string name="text_reg">Регистрация акаунта</string>
    <string name="register_reg">Botton Registr</string>
    <string name="register_log">Botton Login</string>
    <string name="empty_list">Нет записей.   Нажмите \"+ \"</string>
    <string name="title">Title</string>
    <string name="description_plan">Description plan</string>

    <string name="nav_header_desc">avatar</string>
    <string name="nav_header_title">Имя</string>
    <string name="nav_header_subtitle">Статус</string>
    <string name="exit">Выход</string>
    <string name="map">Map</string>




    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="setting">Setting</string>
    <string name="linck">linck</string>
    <string name="calendar">Calendar</string>
    <string name="db_setting">Settings</string>
    <string name="list">List my track</string>



























    <string name="material_calendar_monday">Пн</string>
    <string name="material_calendar_tuesday">Вт</string>
    <string name="material_calendar_wednesday">Ср</string>
    <string name="material_calendar_thursday">Чт</string>
    <string name="material_calendar_friday">Пт</string>
    <string name="material_calendar_saturday">Сб</string>
    <string name="material_calendar_sunday">Вс</string>

    <array name="material_calendar_months_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </array>

    <string name="material_calendar_today_button">Сегодня</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>

</resources>
