<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/db_list"
            android:icon="@drawable/ic_list"
            android:title="@string/list" />
        <item
            android:id="@+id/db_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/db_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar" />

        <item
            android:id="@+id/linck"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/linck" />

    </group>

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/db_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/db_setting" />
            <item
                android:id="@+id/db_exit"
                android:icon="@drawable/exit"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
