<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.register.Register">



  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/map_background"
      android:paddingLeft="@dimen/margin_size_25"
      android:paddingRight="@dimen/margin_size_25">

      <TextView
          android:id="@+id/register_message"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/text_reg"
          android:textSize="@dimen/text_size_35"
          android:textAlignment="center"
          android:layout_marginTop="@dimen/margin_size_60"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/register_wr_et_user_name"
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:layout_marginTop="@dimen/margin_size_60"
          app:layout_constraintTop_toBottomOf="@+id/register_message"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:background="@drawable/bg_ev_input_text">

          <EditText
              android:id="@+id/register_user_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:focusableInTouchMode="true"
              android:paddingLeft="@dimen/margin_size_20"
              android:layout_marginStart="@dimen/margin_size_20"
              android:paddingRight="@dimen/margin_size_20"
              android:layout_marginEnd="@dimen/margin_size_20"
              android:hint="@string/register_user_name"
              android:inputType="text" />
      </com.google.android.material.textfield.TextInputLayout>


      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/register_wr_et_email"
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:layout_marginTop="@dimen/margin_size_20"
          app:layout_constraintTop_toBottomOf="@id/register_wr_et_user_name"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:background="@drawable/bg_ev_input_text">

      <EditText
          android:id="@+id/register_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:focusableInTouchMode="true"
          android:paddingLeft="@dimen/margin_size_20"
          android:layout_marginStart="@dimen/margin_size_20"
          android:paddingRight="@dimen/margin_size_20"
          android:layout_marginEnd="@dimen/margin_size_20"
          android:hint="@string/register_email"
          android:inputType="textEmailAddress" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/register_wr_et_password"
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:layout_marginTop="@dimen/margin_size_20"
          app:layout_constraintTop_toBottomOf="@id/register_wr_et_email"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:background="@drawable/bg_ev_input_text">

          <EditText
              android:id="@+id/register_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:focusableInTouchMode="true"
              android:paddingLeft="@dimen/margin_size_20"
              android:layout_marginStart="@dimen/margin_size_20"
              android:paddingRight="@dimen/margin_size_20"
              android:layout_marginEnd="@dimen/margin_size_20"
              android:hint="@string/register_password"
              android:inputType="textPassword" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/register_wr_et_repeat_password"
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:layout_marginTop="@dimen/margin_size_20"
          app:layout_constraintTop_toBottomOf="@id/register_wr_et_password"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:background="@drawable/bg_ev_input_text">

          <EditText
              android:id="@+id/register_repeat_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:focusableInTouchMode="true"
              android:paddingLeft="@dimen/margin_size_20"
              android:layout_marginStart="@dimen/margin_size_20"
              android:paddingRight="@dimen/margin_size_20"
              android:layout_marginEnd="@dimen/margin_size_20"
              android:hint="@string/register_repeat_password"
              android:inputType="textPassword" />
      </com.google.android.material.textfield.TextInputLayout>


      <ImageButton
          android:id="@+id/register_bt_reg"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_size_60"
          android:background="@drawable/bg_butt"
          app:layout_constraintTop_toBottomOf="@id/register_wr_et_repeat_password"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:contentDescription="@string/register_reg"
          android:src="@drawable/ic_playlist_add_black_24dp"
          />


  </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>